# codex-daily-report

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
codex-daily-report/: SKILL.md
codex-daily-report/agents/: openai.yaml
codex-daily-report/references/: commands.md
examples/: config.example.toml  daily.example.md
skills/codex-daily-report/: SKILL.md
skills/codex-daily-report/agents/: openai.yaml
skills/codex-daily-report/references/: commands.md
src/codex_daily_report/: __init__.py  cli.py  codex_sessions.py  git_activity.py  models.py  render.py  token_usage.py
templates/: daily.zh-CN.md  weekly.zh-CN.md
tests/: test_codex_sessions.py
