[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "codex-daily-report"
version = "0.1.0"
description = "从本机 Codex 会话记录和 Git 活动生成日报素材与 Markdown 草稿"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "jianzhangg" }
]
keywords = ["codex", "daily-report", "git", "productivity", "markdown"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business",
  "Topic :: Software Development"
]

[project.urls]
Homepage = "https://github.com/jianzhangg/codex-daily-report"
Repository = "https://github.com/jianzhangg/codex-daily-report"
Issues = "https://github.com/jianzhangg/codex-daily-report/issues"

[project.scripts]
codex-daily-report = "codex_daily_report.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_daily_report"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
